--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,35 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
-root {
-  --general-border: #e7eaf3;
-  --font-primary: #001001;
-  --general-background: #f8f9fa;
-  --blue-accent: #3498db;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  background-color: var(--general-background);
-}
-
-a {
-  color: var(--blue-accent);
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-  cursor: pointer;
+body.dark-mode {
+  @apply bg-dark-blue text-white;
 }
